Cria módulo de endereco separado
