# backend/src/routes.js
@@ -2,10 +2,12 @@ import produtosRoutes from './modules/produtos/routes';
 import usuariosRoutes from './modules/usuarios/routes';
 import cartoesRoutes from './modules/cartao/routes';
 import comprasRoutes from './modules/compras/routes';
+import enderecosRoutes from './modules/enderecos/routes';
 
 export default [
     produtosRoutes,
     cartoesRoutes,
     usuariosRoutes,
+    enderecosRoutes,
     comprasRoutes
 ];
